# tartan

./: .gitignore  CMakeLists.txt  LICENSE  README.md  annotated.html  annotated_dup.js  board_2board_8hpp_source.html  board_2include_2tartan_2board_2exceptions_8hpp_source.html  board_8hpp_source.html  building.html  chess.html  chess_2chess_8hpp_source.html  chess_2include_2tartan_2chess_2exceptions_8hpp_source.html  chess_8hpp_source.html  citelist.html  classes.html  classtt_1_1Board-members.html  classtt_1_1Board.html  classtt_1_1Board.js  classtt_1_1Board__coll__graph.map  classtt_1_1Board__coll__graph.md5  classtt_1_1Board__inherit__graph.map  classtt_1_1Board__inherit__graph.md5  classtt_1_1Piece-members.html  classtt_1_1Piece.html  classtt_1_1Piece.js  classtt_1_1Piece_1_1Position-members.html  classtt_1_1Piece_1_1Position.html  classtt_1_1Piece_1_1Position.js  classtt_1_1Piece_1_1Turn-members.html  classtt_1_1Piece_1_1Turn.html  classtt_1_1Piece_1_1Turn.js  classtt_1_1Piece_1_1TurnMap-members.html  classtt_1_1Piece_1_1TurnMap.html  classtt_1_1Piece_1_1TurnMap.js  classtt_1_1Piece_1_1TurnMap__coll__graph.map  classtt_1_1Piece_1_1TurnMap__coll__graph.md5  classtt_1_1Piece_1_1TurnMap__inherit__graph.map  classtt_1_1Piece_1_1TurnMap__inherit__graph.md5  classtt_1_1Piece_1_1Turn__coll__graph.map  (+293 more)
.github/workflows/: ci.yaml  doc.yaml
cmake/: version.cmake
doc/: CMakeLists.txt
doc/bibliography/: games.bib  tools.bib
doc/manual/: index.dox
doc/manual/building/: building.dox  building.md
doc/manual/chess/: chess.dox
doc/manual/examples/: CMakeLists.txt
doc/manual/examples/chess/: CMakeLists.txt  complexGame.cpp  game.cpp
install/: CMakeLists.txt
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_17.js  classes_18.js  classes_2.js  classes_3.js  (+61 more)
src/: CMakeLists.txt  chessboard.cpp  piece.cpp  position.cpp  turn.cpp  turnMap.cpp
src/board/: CMakeLists.txt  board.cpp  piece.cpp  position.cpp  turn.cpp  turnMap.cpp
src/board/include/tartan/: board.hpp  version.hpp.in
src/board/include/tartan/board/: board.hpp  exceptions.hpp
src/chess/: CMakeLists.txt  chess.cpp
src/chess/include/tartan/: chess.hpp
src/chess/include/tartan/chess/: chess.hpp  exceptions.hpp
src/chess/pieces/bishop/: bishop.cpp  bishopTurn.cpp
src/chess/pieces/king/: king.cpp  kingTurn.cpp
src/chess/pieces/knight/: knight.cpp  knightTurn.cpp
src/chess/pieces/pawn/: pawn.cpp  pawnTurn.cpp
src/chess/pieces/queen/: queen.cpp  queenTurn.cpp
src/chess/pieces/rook/: rook.cpp  rookTurn.cpp
src/include/: dchess.hpp  dchessversion.hpp.in
src/include/dchess/: dchess.hpp  exceptions.hpp  version.hpp.in
src/pieces/: pawn.cpp
src/pieces/bishop/: bishop.cpp  bishopTurn.cpp
src/pieces/king/: king.cpp  kingTurn.cpp
src/pieces/knight/: knight.cpp  knightTurn.cpp
src/pieces/pawn/: pawn.cpp  pawnTurn.cpp
src/pieces/queen/: queen.cpp  queenTurn.cpp
src/pieces/rook/: rook.cpp  rookTurn.cpp
tests/: CMakeLists.txt  bishop.cpp  blackPawn.cpp  castling.cpp  castling1.cpp  check1.cpp  checkMove.cpp  checkmate1.cpp  checkmate2.cpp  enPassant.cpp  interactivePlay.cpp  knight.cpp  makeMove.cpp  noEnPassant.cpp  noPieceGetter.cpp  pawn.cpp  position.cpp  queen.cpp  rook.cpp  scholarsMate.cpp  whitePawn.cpp
tests/include/: testutils.hpp
tests/testutils/: CMakeLists.txt  testutils.cpp
tests/testutils/include/: testutils.hpp
